# dogfooding

ai-news/: .env.example  .gitignore  pyproject.toml
ai-news/ai_news/: __init__.py  main.py
ai-news/ai_news/api/: __init__.py  main.py  schemas.py
ai-news/ai_news/api/routes/: __init__.py  news.py  sources.py
ai-news/ai_news/collectors/: __init__.py  base.py  factory.py  github_collector.py  rss_collector.py
ai-news/ai_news/core/: config.py  database.py
ai-news/ai_news/models/: __init__.py  models.py
ai-news/ai_news/scheduler/: __init__.py  scheduler.py  task_manager.py
ai-news/ai_news/services/: __init__.py
ai-news/ai_news/services/ai/: __init__.py  base.py  openai_service.py
ai-news/ai_news/services/processor/: __init__.py  cleaner.py  deduplicator.py  pipeline.py
ai-news/scripts/: init_db.py  test_collectors.py
china-chess/: animation.js  app.js  chessboard.js  game.js  index.html  lessons.js  openings.js  styles.css  tutorial.js
chinese-text-categorization/: __init__.py  app.py  classifier.py  config.py  evaluator.py  example.py  preprocessor.py  requirements.txt  test_load_model.py  train_and_test.py  vectorizer.py
excel-report/: .gitignore  main.py  my_report.xlsx  pyproject.toml  requirements.txt
file-searcher/: config.py  constants.py  file_parser.py  indexer.py  main.py  main_window.py  requirements.txt  search_engine.py  utils.py
flappy-bird/: game.js  index.html  style.css
image-service/: .env.example  .gitignore  requirements.txt  run.py
js-cipher/: package-lock.json  package.json  test-obfuscator.js  test-obfuscator.ts  test-runtime.ts  tsconfig.json
martix-mind/: demo.py  test_bugs.py  test_simple.py  test_svd_fix.py
nginx-log-analysis/: analyzer.py  main.py  nginx-report.html  parser.py  report.py  requirements.txt
particle-system/: .gitignore  index.html  package.json  (+2 more)
secret-scan/: .gitignore  .gitlab-ci.yml.example  .pre-commit-hooks.yaml  .secret-scan.example.yml  Jenkinsfile.example  pyproject.toml
secret-scan/.github/workflows/: secret-scan.yml
secret-scan/secret_scan/: __main__.py  builtin_rules.yml  config.py  models.py  scanner.py  whitelist.py
secret-scan/secret_scan/detectors/: __init__.py  base.py  entropy.py  rule.py
secret-scan/secret_scan/git/: __init__.py  diff.py
secret-scan/secret_scan/reporters/: __init__.py  html_reporter.py  json_reporter.py
secret-scan/templates/: report.html.jinja2
secret-scan/tests/: test.py  test_config.py  test_models.py  test_whitelist.py
secret-scan/tests/test_detectors/: test_entropy.py  test_rule.py
secret-scan/tests/test_git/: test_diff.py
(+229 files in other folders)
