[project]
name = "ai-news-aggregator"
version = "0.1.0"
description = "AI 资讯聚合智能体 - 全自动全网 AI 类内容抓取、清洗、汇总、摘要、分类"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",
    "redis>=5.0.1",
    "apscheduler>=3.10.4",
    "feedparser>=6.0.11",
    "requests>=2.31.0",
    "lxml>=5.1.0",
    "playwright>=1.41.0",
    "openai>=1.10.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "jieba>=0.42.1",
    "beautifulsoup4>=4.12.3",
    "httpx-socks>=0.8.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_news"]

[tool.hatch.build.targets.sdist]
include = [
    "ai_news/**/*.py",
    "scripts/**/*.py",
    "pyproject.toml",
    ".env.example",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
